fix font size issue on mobile, total width might need a change

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -4,9 +4,25 @@
 
 @media only screen and (max-width: 1080px) {
   /*NAVBAR */  
- 
+
+  html {
+    font-size: 16px;
+  }
+
+  .wrapper {
+    width: 90%;
+  }
+
   h1 {
-    padding: 2rem 0rem;
+    padding: 1rem 0rem 2rem;
+  }
+
+  h3 {
+    padding-bottom: 0.5rem;
+  }
+
+  h4 {
+    padding-bottom: 0.5rem;
   }
 
   .menu {
@@ -23,6 +39,10 @@
   
   #name-nav {
     display: none;
+  }
+
+  #bike-img {
+    width: 80vw;
   }
 
   /* Menu animation, sliding drawers effect(coined?) */
@@ -160,12 +180,8 @@
   /* Form */
 
   .form-box {
-    max-width: 80vw;
+    max-width: 90vw;
     height: 2rem;
-  }
-
-  textarea {
-    /* min-width: 80vw; */
   }
 
   /* Single Event */
@@ -190,11 +206,19 @@
     padding: 2rem 0rem;
   }
 
+  .wrapper {
+    width: 80%;
+  }
+
   #logo-nav {
     margin: 0.5rem;
     height: 3rem;
     padding-left: 1.5rem;
     cursor: pointer;
+  }
+
+  #bike-img {
+    width: 80vw;
   }
 
   .nav-link {
@@ -244,7 +268,6 @@
     flex-flow: row;
     justify-content: space-around;
     align-items: flex-start;
-    
   }
    
   #logo-img {
@@ -252,6 +275,10 @@
      width: 50%;
      margin: auto; 
      float: left; 
+  }
+
+  #bike-img {
+    width: 50vw;
   }
 
   .intro {
@@ -357,7 +384,7 @@ footer {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   color: #353535;
   text-align: center;
   font-weight: bold;
@@ -365,9 +392,9 @@ h1 {
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #353535;
-  padding-bottom: 1.5rem;
+  padding-bottom: 1rem;
 }
 
 .h2-two {
@@ -375,13 +402,8 @@ h2 {
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   color: #353535;
-  padding-bottom: 1rem;
-}
-
-h4 {
-  padding-bottom: 1rem;
 }
 
 p {
@@ -436,7 +458,6 @@ a {
   position: relative;
   top: 4rem;
   min-height: calc(100vh - 9rem);
-  width: 80%;
   margin: auto;
   padding-bottom: 1rem;
 }
@@ -460,7 +481,7 @@ a {
   border-radius: 7px;
   background: #474747;
   color: white;
-  font-size: 20px;
+  font-size: 1rem;
   margin: auto;
   display: block;
   /* box-shadow: 3px 4px 10px #888888;  */
@@ -590,7 +611,6 @@ time {
 #bike-img {
   display: block;
   margin: 0 auto;
-  width: 50vw;
   padding-bottom: 2rem;
 }
 
@@ -632,7 +652,8 @@ time {
 }
 
 textarea {
-  /* min-width: 40vw; */
+  width: 21rem;
+  max-width: 90vw;
 }
 
 .red-asterisk {
